--- a/index.html
+++ b/index.html
@@ -3,87 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Operations</title>
-    <script>
-        const url = google.script.run.withSuccessHandler(renderTable);
-
-        // Load dữ liệu
-        function loadData() {
-            fetchScript('getData', {}).then(renderTable);
-        }
-
-        // Thêm mới
-        function addData() {
-            const name = document.getElementById('name').value;
-            const amount = document.getElementById('amount').value;
-            const category = document.getElementById('category').value;
-
-            fetchScript('addData', { name, amount, category }).then(loadData);
-        }
-
-        // Sửa dữ liệu
-        function editData(id) {
-            const name = prompt('Enter new name:');
-            const amount = prompt('Enter new amount:');
-            const category = prompt('Enter new category:');
-            fetchScript('editData', { id, name, amount, category }).then(loadData);
-        }
-
-        // Xóa dữ liệu
-        function deleteData(id) {
-            if (confirm('Are you sure to delete this record?')) {
-                fetchScript('deleteData', { id }).then(loadData);
-            }
-        }
-
-        // Gửi yêu cầu
-        async function fetchScript(action, data) {
-            const response = await fetch('', {
-                method: 'POST',
-                body: JSON.stringify({ action, data }),
-            });
-            return await response.json();
-        }
-
-        // Render bảng
-        function renderTable(data) {
-            const table = document.getElementById('data-table');
-            table.innerHTML = data.data.map(row => `
-                <tr>
-                    <td>${row[0]}</td>
-                    <td>${row[1]}</td>
-                    <td>${row[2]}</td>
-                    <td>${row[3]}</td>
-                    <td>
-                        <button onclick="editData(${row[0]})">Edit</button>
-                        <button onclick="deleteData(${row[0]})">Delete</button>
-                    </td>
-                </tr>
-            `).join('');
-        }
-
-        document.addEventListener('DOMContentLoaded', loadData);
-    </script>
+    <title>CRUD App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>CRUD Operations</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Amount</th>
-                <th>Category</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody id="data-table"></tbody>
-    </table>
+    <div class="container">
+        <h1>CRUD App</h1>
+        
+        <!-- Thêm Dữ liệu -->
+        <section id="addSection">
+            <h2>Add Data</h2>
+            <input type="text" id="name" placeholder="Name">
+            <input type="number" id="amount" placeholder="Amount">
+            <input type="text" id="category" placeholder="Category">
+            <button id="addBtn">Add</button>
+        </section>
 
-    <h2>Add New Record</h2>
-    <input id="name" placeholder="Name" />
-    <input id="amount" placeholder="Amount" />
-    <input id="category" placeholder="Category" />
-    <button onclick="addData()">Add</button>
+        <!-- Sửa Dữ liệu -->
+        <section id="editSection" style="display: none;">
+            <h2>Edit Data</h2>
+            <input type="hidden" id="editId">
+            <input type="text" id="editName" placeholder="Name">
+            <input type="number" id="editAmount" placeholder="Amount">
+            <input type="text" id="editCategory" placeholder="Category">
+            <button id="saveBtn">Save</button>
+            <button id="cancelEditBtn">Cancel</button>
+        </section>
+
+        <!-- Bảng Dữ liệu -->
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Amount</th>
+                    <th>Category</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="dataTableBody">
+                <!-- Dữ liệu sẽ được chèn vào đây -->
+            </tbody>
+        </table>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
